all/gwangju/2,3/2,3.EKS-CICD-gwanju-vpc.tf
resource "aws_vpc" "gwangju-main" {
  cidr_block = "10.0.0.0/16"

  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
    Name = "gwangju-vpc"
  }
}

# Public
## Internet Gateway
resource"aws_internet_gateway" "gwangju-main" {
  vpc_id = aws_vpc.gwangju-main.id

  tags = {
    Name = "gwangju-igw"
  }
}

## Route Table
resource "aws_route_table" "gwangju-public" {
  vpc_id = aws_vpc.gwangju-main.id

  tags = {
    Name = "gwangju-public-rt"
  }
}
 
resource "aws_route" "public" {
  route_table_id = aws_route_table.gwangju-public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.gwangju-main.id
}

## Public Subnet
resource "aws_subnet" "gwangju-public_a" {
  vpc_id = aws_vpc.gwangju-main.id
  cidr_block = "10.0.3.0/24"
  availability_zone = "ap-northeast-2a"
  map_public_ip_on_launch = true

  tags = {
    Name = "gwangju-public-a"
  }
}

resource "aws_subnet" "gwangju-public_b" {
  vpc_id = aws_vpc.gwangju-main.id
  cidr_block = "10.0.4.0/24"
  availability_zone = "ap-northeast-2b"
  map_public_ip_on_launch = true

  tags = {
    Name = "gwangju-public-b"
  }
}

## Attach Public Subnet in Route Table
resource "aws_route_table_association" "gwangju-public_a" {
  subnet_id = aws_subnet.gwangju-public_a.id
  route_table_id = aws_route_table.gwangju-public.id
}

resource "aws_route_table_association" "gwangju-public_b" {
  subnet_id = aws_subnet.gwangju-public_b.id
  route_table_id = aws_route_table.gwangju-public.id
}

# Private

## Elastic IP
resource "aws_eip" "gwangju-private_a" {
}

resource "aws_eip" "gwangju-private_b" {
}

## NAT Gateway
resource "aws_nat_gateway" "gwangju-private_a" {
  depends_on = [aws_internet_gateway.gwangju-main]

  allocation_id = aws_eip.gwangju-private_a.id
  subnet_id = aws_subnet.gwangju-public_a.id

  tags = {
    Name = "gwangju-ngw-a"
  }
}

resource "aws_nat_gateway" "gwangju-private_b" {
  depends_on = [aws_internet_gateway.gwangju-main]

  allocation_id = aws_eip.gwangju-private_b.id
  subnet_id = aws_subnet.gwangju-public_b.id

  tags = {
    Name = "gwangju-ngw-b"
  }
}

## Route Table
resource "aws_route_table" "gwangju-private_a" {
  vpc_id = aws_vpc.gwangju-main.id

  tags = {
    Name = "gwangju-private-a-rt"
  }
}

resource "aws_route_table" "gwangju-private_b" {
  vpc_id = aws_vpc.gwangju-main.id

  tags = {
    Name = "gwangju-private-b-rt"
  }
}

resource "aws_route" "gwangju-private_a" {
  route_table_id = aws_route_table.gwangju-private_a.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.gwangju-private_a.id
}

resource "aws_route" "gwangju-private_b" {
  route_table_id = aws_route_table.gwangju-private_b.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.gwangju-private_b.id
}

resource "aws_subnet" "gwangju-private_a" {
  vpc_id = aws_vpc.gwangju-main.id
  cidr_block = "10.0.0.0/24"
  availability_zone = "ap-northeast-2a"

  tags = {
    Name = "gwangju-private-a"
  }
}

resource "aws_subnet" "gwangju-private_b" {
  vpc_id = aws_vpc.gwangju-main.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "ap-northeast-2b"

  tags = {
    Name = "gwangju-private-b"
  }
}

## Attach Private Subnet in Route Table
resource "aws_route_table_association" "gwangju-private_a" {
  subnet_id = aws_subnet.gwangju-private_a.id
  route_table_id = aws_route_table.gwangju-private_a.id
}

resource "aws_route_table_association" "gwangju-private_b" {
  subnet_id = aws_subnet.gwangju-private_b.id
  route_table_id = aws_route_table.gwangju-private_b.id
}
